force-app/main/default/objects/Commit__c/Commit__c.object-meta.xml
<CustomObject>
    <label>Commit</label>
    <pluralLabel>Commits</pluralLabel>
    <nameField>
        <label>Commit Number</label>
        <type>AutoNumber</type>
        <displayFormat>CMT-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Individual commits within a branch, tracking code changes and their deployment status.</description>
</CustomObject>