force-app/main/default/objects/Commit__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <type>Text</type>
    <length>255</length>
    <description>The author of this commit.</description>
</CustomField>