force-app/main/default/objects/Commit__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>MasterDetail</type>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Commits</relationshipLabel>
    <relationshipName>Commits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>The branch this commit belongs to.</description>
</CustomField>