force-app/main/default/objects/Commit__c/fields/Commit_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Commit_Timestamp__c</fullName>
    <label>Commit Timestamp</label>
    <type>DateTime</type>
    <description>The date and time when the commit was made.</description>
</CustomField>