force-app/main/default/objects/Commit__c/fields/Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Status__c</fullName>
    <label>Deployment Status</label>
    <type>Picklist</type>
    <description>The deployment status of this commit.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>NotDeployed</fullName><default>true</default><label>Not Deployed</label></value>
            <value><fullName>Deployed</fullName><default>false</default><label>Deployed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>RolledBack</fullName><default>false</default><label>Rolled Back</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>