force-app/main/default/objects/Commit__c/fields/Is_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Is_Deployed__c</fullName>
    <label>Is Deployed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this commit has been deployed.</description>
</CustomField>