force-app/main/default/objects/Commit__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>The commit message describing the changes.</description>
</CustomField>